--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
                 
                 <div class="my-[5%] text-center">
-                    <a id="Go_To_Link" href="https://via.placeholder.com/150x150/FFFFFF/808080">Visit Link</a>
+                    <a id="Go_To_Link" href="https://via.placeholder.com/150x150/FFFFFF/808080" target="_blank">Visit Link</a>
                 </div>
 
             </section>
